crates/tlang_hir_opt/tests/snapshots/exhaustive_enum_match__exhaustive_match_removes_identifier_catchall.snap
---
source: crates/tlang_hir_opt/tests/exhaustive_enum_match.rs
expression: pretty
---
enum AB {
    A
    B
}
fn label(arg0: AB) -> unknown {
    match arg0 {
        AB::A => {
            "a"
        },
        AB::B => {
            "b"
        },
    }
}
