crates/tlang_hir_opt/tests/snapshots/exhaustive_enum_match__exhaustive_match_with_data_fields.snap
---
source: crates/tlang_hir_opt/tests/exhaustive_enum_match.rs
expression: pretty
---
enum Shape {
    Circle {
        0: f64,
    }
    Rect {
        0: f64,
        1: f64,
    }
}
fn area(shape: Shape) -> unknown {
    match shape {
        Shape::Circle { 0: r } => {
            r
        },
        Shape::Rect { 0: w, 1: h } => {
            (w * h)
        },
    }
}
