crates/tlang_hir_opt/tests/snapshots/exhaustive_enum_match__guarded_arm_keeps_wildcard.snap
---
source: crates/tlang_hir_opt/tests/exhaustive_enum_match.rs
expression: pretty
---
enum Light {
    On
    Off
}
fn describe(light: Light) -> String {
    match light {
        Light::On => {
            "on"
        },
        Light::Off if false => {
            "off (impossible)"
        },
        _ => {
            "fallback"
        },
    }
}
