crates/tlang_hir_opt/tests/snapshots/exhaustive_enum_match__no_wildcard_is_noop.snap
---
source: crates/tlang_hir_opt/tests/exhaustive_enum_match.rs
expression: pretty
---
enum Color {
    Red
    Green
    Blue
}
fn name(color: Color) -> String {
    match color {
        Color::Red => {
            "red"
        },
        Color::Green => {
            "green"
        },
        Color::Blue => {
            "blue"
        },
    }
}
