crates/tlang_hir_opt/tests/snapshots/exhaustive_enum_match__partial_match_keeps_wildcard.snap
---
source: crates/tlang_hir_opt/tests/exhaustive_enum_match.rs
expression: pretty
---
enum Color {
    Red
    Green
    Blue
}
fn name(color: Color) -> unknown {
    match color {
        Color::Red => {
            "red"
        },
        Color::Green => {
            "green"
        },
        _ => {
            "fallback"
        },
    }
}
