crates/tlang_hir_opt/tests/snapshots/exhaustive_enum_match__unknown_typed_catchall_keeps_wildcard.snap
---
source: crates/tlang_hir_opt/tests/exhaustive_enum_match.rs
expression: pretty
---
enum SafeHtml {
    Html {
        0: String,
    }
}
fn render(arg0: unknown) -> unknown {
    match arg0 {
        SafeHtml::Html { 0: v } => {
            v
        },
        v => {
            "fallback"
        },
    }
}
